--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,5 @@ dependencies {
     apply plugin: 'com.google.gms.google-services'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.code.gson:gson:2.8.7'
-
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 }
